--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
- <title>Зникаючі види тварин </title>
+    <head>
+             <title>Зникаючі види тварин </title>
+            <link rel="stylesheet" href="style.css">
+     </head>
  <body>
  <header>
     <h1>Зникаючі види тварин:</h1> 
